STANBOL-888: some version upgrades to dependencies, upgraded to newest Sling Lauchpad and lauchpad maven plugin, upgrade to maven-shade-plugin 2.0 (see also discussion at http://stanbol.markmail.org/thread/myn32zyw6fazuub2)
git-svn-id: https://svn.apache.org/repos/asf/stanbol/trunk/launchers@1441720 13f79535-47bb-0310-9956-ffa450edef68