@@ -3,21 +3,24 @@ including the bundles defined at src/main/bundles/list.xml
 
 To start this after building use:
 
-  java -Xmx512M -jar target/org.apache.stanbol.launchers.full-0.9.0-incubating-SNAPSHOT.jar
+    java -Xmx1024m -XX:MaxPermSize=256M -jar \
+        target/org.apache.stanbol.launchers.full-*-SNAPSHOT.jar
 
 The Stanbol Enhancer HTTP endpoint should then be available at 
 
-  http://localhost:8080
+    http://localhost:8080
 
 So that you can POST content using, for example:
 
-  curl -H "Content-Type: text/plain" -T data/text-examples/obama-signing.txt http://localhost:8080/engines
+    curl -H "Content-Type: text/plain" \
+        -T ../../enhancer/data/text-examples/obama-signing.txt \
+        http://localhost:8080/engines
 
 Configure any required parameter for the enhancement engines, at
 
   http://localhost:8080/system/console/
 
-The OSGi state is stored in the ./sling folder.
+The OSGi state is stored in the ./stanbol folder.
 
-The logs are found at sling/logs/error.log and can be configured from the
+The logs are found at stanbol/logs/error.log and can be configured from the
 OSGi console.
